add comments in code

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </head>
 
   <body>
+    <!-- Modal for contact info -->
     <div class="modalContainer">
       <div class="modal">
         <div class="modal__header">
@@ -66,6 +67,7 @@
     </div>
 
     <div class="container">
+      <!-- Intro section -->
       <section class="card intro">
         <div class="intro__header">
           <div class="intro__img">
@@ -100,6 +102,8 @@
           </div>
         </div>
       </section>
+
+      <!-- About section -->
       <section class="card about" data-aos="fade-up" data-aos-duration="1000">
         <h2>About</h2>
         <p>
@@ -111,6 +115,8 @@
           never stop and I will always try to keep my knowledge up to date.
         </p>
       </section>
+
+      <!-- Experience section -->
       <section
         class="card experience"
         data-aos="fade-up"
@@ -135,6 +141,8 @@
           </div>
         </div>
       </section>
+
+      <!-- Education section -->
       <section
         class="card education"
         data-aos="fade-up"
@@ -185,6 +193,8 @@
           </div>
         </div>
       </section>
+
+      <!-- License section -->
       <section class="card license" data-aos="fade-up" data-aos-duration="1000">
         <h2>Licenses & certifications</h2>
         <div class="license__items">
@@ -220,6 +230,8 @@
           </div>
         </div>
       </section>
+
+      <!-- Skill section -->
       <section class="card skill" data-aos="fade-up" data-aos-duration="1000">
         <h2>Skills</h2>
         <div class="skill__items">
@@ -299,9 +311,12 @@
           </div>
         </div>
         <div class="skill__footer">
-          <span class="skill__footerText">Show all skills</span><i class="fa-solid fa-chevron-down"></i>
+          <span class="skill__footerText">Show all skills</span
+          ><i class="fa-solid fa-chevron-down"></i>
         </div>
       </section>
+
+      <!-- Language section -->
       <section
         class="card language"
         data-aos="fade-up"
@@ -323,6 +338,8 @@
           </div>
         </div>
       </section>
+
+      <!-- Project section -->
       <section class="card project" data-aos="fade-up" data-aos-duration="1000">
         <h2>Projects</h2>
         <div class="project__items">
@@ -426,9 +443,12 @@
           </div>
         </div>
         <div class="project__footer">
-          <span class="project__footerText">Show all projects</span><i class="fa-solid fa-chevron-down"></i>
+          <span class="project__footerText">Show all projects</span
+          ><i class="fa-solid fa-chevron-down"></i>
         </div>
       </section>
+
+      <!-- Interest section -->
       <section
         class="card interest"
         data-aos="fade-up"
@@ -544,10 +564,12 @@
       </section>
     </div>
 
+    <!-- Animation on scroll -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
