add code for responsiveness

--- a/index.html
+++ b/index.html
@@ -78,18 +78,28 @@
           <div class="details__left">
             <h1>Haniyeh Peyvandi</h1>
             <h3>Frontend Developer</h3>
-            <p>
+            <a
+              href="https://www.linkedin.com/school/alzahra-university/"
+              target="_blank"
+              class="university"
+            >
+              Alzahra University
+            </a>
+            <p class="location">
               Semnan Province, Iran &middot;
               <span class="contactInfo openModal">Contact info</span>
             </p>
-            <p>154 connections</p>
+            <p class="connection">154 connections</p>
             <button class="btn btn--connect">
               <i class="fa-solid fa-user-plus"></i>Connect
             </button>
             <button class="btn btn--msg">
               <i class="fa-solid fa-lock"></i>Message
             </button>
-            <button class="btn btn--more">More</button>
+            <button class="btn btn--more">
+              <span>More</span>
+              <i class="fa-solid fa-ellipsis"></i>
+            </button>
           </div>
           <div class="details__right">
             <a
